--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Select ONE Additional
       <div>
         <h2 id="start">How it started.</h2>
         <img
-          class="pic" src="AbstractFace_Unit6Project.jpg"
+          class="pic" src="https://i.redd.it/more-3d-models-ive-made-that-i-dont-think-ive-shared-here-v0-i73kpsu2i36c1.png?width=830&format=png&auto=webp&s=95e405d558b31c3d1ec24dbde8ed40a840390d88"
         />
       </div>
       <div>
